Replay timeline jumping fixed

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -2348,12 +2348,14 @@ input.url
         width: 100%
 
         #timeline
-            width:100%
+            width: 99%
             height: 80px
+            margin: auto;
             display-flex()
             flex-direction(row)
             overflow: auto
             position: relative
+            scroll-behavior: smooth;
 
             .step
                 text-align: center
